<resources>
    <string name="app_name">Online Shop</string>
    <string name="email">Email</string>
    <string name="passsword">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="Sign_up">Sign Up</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="Dont">Dont have an account?</string>
    <string name="createAccount">Create account</string>
    <string name="createYourAccount">Create your account</string>
    <string name="name">Name</string>
    <string name="dateOfBirth">Date of birth</string>
    <string name="address">Address</string>
    <string name="updateProfile">Update Profile</string>
    <string name="title_activity_app_page">app_page</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_app">app</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="update_profile">Update Profile</string>

</resources>